--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -1,9 +1,10 @@
 .header
     @include linear-gradient(to right, #381d86, #193285)
     color: $white
-    margin-bottom: 30px
     padding-top: 80px
     padding-bottom: 80px
+    position: relative
+    z-index: 0
 
     &__site-descr
         color: #769cf8
